--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             justify-content: center;
             text-align: center;
             
-            /* Darkened background image */
-            background: linear-gradient(rgba(15, 23, 42, 0.6), rgba(15, 23, 42, 0.6)), url('https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+            /* Darkened background image using local file 'pic.avif' */
+            background: linear-gradient(rgba(15, 23, 42, 0.5), rgba(15, 23, 42, 0.5)), url('pic.avif');
             background-size: cover;
             background-position: center;
         }
